--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.3.0",
+    "@types/nodemailer": "^6.4.10",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.10.1",
+    "nodemailer": "^6.9.5",
     "ts-node-dev": "^2.0.0"
   }
 }
