--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/nodemailer": "^6.4.10",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.2.0",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.5",
     "ts-node-dev": "^2.0.0"
   }
