--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/index.ts",
     "start": "node --loader ts-node/esm ./dist/index.js",
-    "build": "tsc && yarn prisma migrate deploy"
+    "build": "npx prisma migrate deploy && tsc"
   },
   "keywords": [],
   "author": "",
