--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.3.1",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/nodemailer": "^6.4.10",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
